ops/kubernetes/ha/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: duckdock
  labels:
    app.kubernetes.io/part-of: duckdock
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
